--- a/src/components/CompanyList/companylist.css
+++ b/src/components/CompanyList/companylist.css
@@ -8,9 +8,10 @@
   width: 90%;
 }
 
-.company.ng-enter, .company.ng-leave-active {transform: translate3d(0,-100px,0); opacity: 0;}
+.company.ng-enter {transform: translate3d(0,-100px,0); opacity: 0;}
 .company.ng-enter-stagger {transition-delay: 0.1s; transition-duration: 0s;}
 .company.ng-enter-active {transform: translate3d(0,0,0); opacity: 1;}
+.company.ng-leave-active {transform: translate3d(0,100px,0); opacity: 0;}
 
 .company.off {opacity: 0.5;}
 .company-name {
